load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "modal_docs",
    srcs = [
        "__init__.py",
        "gen_cli_docs.py",
        "gen_reference_docs.py",
        "mdmd/__init__.py",
        "mdmd/mdmd.py",
        "mdmd/signatures.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//client/py/modal",
        "@pip//click",
        "@pip//synchronicity",
    ],
)

py_binary(
    name = "gen_cli_docs_bin",
    srcs = ["gen_cli_docs_main.py"],
    main = "gen_cli_docs_main.py",
    visibility = ["//visibility:public"],
    deps = [":modal_docs"],
)

py_binary(
    name = "gen_reference_docs_bin",
    srcs = ["gen_reference_docs_main.py"],
    main = "gen_reference_docs_main.py",
    visibility = ["//visibility:public"],
    deps = [":modal_docs"],
)
