load("//bazel:pytest.bzl", "pytest_test")

pytest_test(
    name = "tests",
    size = "medium",
    srcs = glob(["**/*.py"]),
    args = [
        "client/py/test/",
        "--rootdir=client/py/",
        "-p",
        "no:cacheprovider",
    ],
    data = ["//client/py:pyproject.toml"] + glob(
        [
            "supports/**",
            "mdmd_data/**",
        ],
        exclude = ["supports/**/*.py"],
    ),
    env = {
        "MODAL_INTERNAL_ENV": "test",
    },
    imports = [".."],
    shard_count = 32,
    # watchfiles (transitive via client/py/modal) has Rust extensions; pip packages
    # are resolved per target platform. On arm64 target builds, rules_python
    # downloads arm64 wheels which lack _rust_notify.so. Skip on non-x86_64 targets.
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//constraints:modal_worker_host",
    ],
    deps = [
        "//client/modal_proto",
        "//client/py/modal",
        "//client/py/modal_docs",
        "@pip//aiohttp",
        "@pip//fastapi",
        "@pip//flaky",
        "@pip//freezegun",
        "@pip//grpclib",
        "@pip//httpx",
        "@pip//ipykernel",
        "@pip//jupytext",
        "@pip//nbclient",
        "@pip//nbformat",
        "@pip//nest_asyncio",
        "@pip//packaging",
        "@pip//protobuf",
        "@pip//psutil",
        "@pip//pyjwt",
        "@pip//pytest_asyncio",
        "@pip//pytest_benchmark",
        "@pip//pytest_env",
        "@pip//pytest_freezegun",
        "@pip//pytest_timeout",
        "@pip//python_dotenv",
        "@pip//python_json_logger",
    ],
)
