load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cls-call-with-options_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/cls-call-with-options",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "cls-call-with-options",
    embed = [":cls-call-with-options_lib"],
    visibility = ["//visibility:public"],
)
