load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "custom-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/custom-client",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "custom-client",
    embed = [":custom-client_lib"],
    visibility = ["//visibility:public"],
)
