load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "function-call_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/function-call",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "function-call",
    embed = [":function-call_lib"],
    visibility = ["//visibility:public"],
)
