load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "function-call_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/modal/client/go/examples/function-call",
    visibility = ["//visibility:private"],
    deps = ["//client/go"],
)

go_binary(
    name = "function-call",
    embed = [":function-call_lib"],
    visibility = ["//visibility:public"],
)
