load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/sandbox-agent",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "sandbox-agent",
    embed = [":sandbox-agent_lib"],
    visibility = ["//visibility:public"],
)
