load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-cloud-bucket_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/modal/client/go/examples/sandbox-cloud-bucket",
    visibility = ["//visibility:private"],
    deps = ["//client/go"],
)

go_binary(
    name = "sandbox-cloud-bucket",
    embed = [":sandbox-cloud-bucket_lib"],
    visibility = ["//visibility:public"],
)
