load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-directory-snapshot_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/sandbox-directory-snapshot",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "sandbox-directory-snapshot",
    embed = [":sandbox-directory-snapshot_lib"],
    visibility = ["//visibility:public"],
)
