load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-filesystem-snapshot_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/modal/client/go/examples/sandbox-filesystem-snapshot",
    visibility = ["//visibility:private"],
    deps = ["//client/go"],
)

go_binary(
    name = "sandbox-filesystem-snapshot",
    embed = [":sandbox-filesystem-snapshot_lib"],
    visibility = ["//visibility:public"],
)
