load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-gpu_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/sandbox-gpu",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "sandbox-gpu",
    embed = [":sandbox-gpu_lib"],
    visibility = ["//visibility:public"],
)
