load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-named_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/modal/client/go/examples/sandbox-named",
    visibility = ["//visibility:private"],
    deps = ["//client/go"],
)

go_binary(
    name = "sandbox-named",
    embed = [":sandbox-named_lib"],
    visibility = ["//visibility:public"],
)
