load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-poll_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/sandbox-poll",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "sandbox-poll",
    embed = [":sandbox-poll_lib"],
    visibility = ["//visibility:public"],
)
