load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-prewarm_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/libmodal/modal-go/examples/sandbox-prewarm",
    visibility = ["//visibility:private"],
    deps = ["//libmodal/modal-go"],
)

go_binary(
    name = "sandbox-prewarm",
    embed = [":sandbox-prewarm_lib"],
    visibility = ["//visibility:public"],
)
