load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sandbox-private-image_lib",
    srcs = ["main.go"],
    importpath = "github.com/modal-labs/modal/client/go/examples/sandbox-private-image",
    visibility = ["//visibility:private"],
    deps = ["//client/go"],
)

go_binary(
    name = "sandbox-private-image",
    embed = [":sandbox-private-image_lib"],
    visibility = ["//visibility:public"],
)
